src/test/minijava/success/MainAttributeTest.mjava
public class MainAttributeTest {

    static int i = 1;

    public static void main(String[] args) {
        int j = i;
    }
}